# vsodium

./: .gitignore  CMakeLists.txt  main.cpp  vsodium.cmake  vsodium_aes256gcm.cpp  vsodium_aes256gcm.h  vsodium_call_checker.cpp  vsodium_call_checker.h  vsodium_curve25519.cpp  vsodium_curve25519.h  vsodium_emodji.cpp  vsodium_emodji.h  vsodium_init.cpp  vsodium_init.h  vsodium_key_exchange.cpp  vsodium_key_exchange.h  vsodium_string.cpp  vsodium_string.h  vsodium_xchacha20poly1305_ietf.cpp  vsodium_xchacha20poly1305_ietf.h  vsodium_xsalsa20poly1305.cpp  vsodium_xsalsa20poly1305.h
